--- a/basic-navigation/manifest.json
+++ b/basic-navigation/manifest.json
@@ -2,16 +2,16 @@
 
   "name": "Shortcuts for basic navigation",
   "description": "Allows to natively specify shortcuts for basic navigation in Chrome",
-  "version": "1.1",
+  "version": "1.2",
   "manifest_version": 2,
 
   "icons": {
-    "16":  "images/icon-16px.png",
-    "32":  "images/icon-32px.png",
-    "64":  "images/icon-64px.png",
-    "128": "images/icon-128px.png",
-    "256": "images/icon-256px.png",
-    "512": "images/icon-512px.png"
+    "16":  "images/basic-navigation-16px.png",
+    "32":  "images/basic-navigation-32px.png",
+    "64":  "images/basic-navigation-64px.png",
+    "128": "images/basic-navigation-128px.png",
+    "256": "images/basic-navigation-256px.png",
+    "512": "images/basic-navigation-512px.png"
   },
 
   "background": {
@@ -28,13 +28,13 @@
 
     "next-tab": {
       "suggested_key": {
-        "default": "Alt+Up"
+        "default": "Alt+Right"
       },
       "description": "Next tab"
     },
     "previous-tab": {
       "suggested_key": {
-        "default": "Alt+Down"
+        "default": "Alt+Left"
       },
       "description": "Previous tab"
     },
